added quiz functionality
